--- a/biisal/template/dl.html
+++ b/biisal/template/dl.html
@@ -36,8 +36,8 @@
 
     <footer>
         <center>
-            <a href="https://github.com/biisal/biisal-file-stream-pro">
-                <h3 style="color: black; text-align: center;">FORK ME</h3>
+            <a href="https://telegram.me/spshah878">
+                <h3 style="color: black; text-align: center;">CONTACT ME</h3>
             </a>
         </center>
 
