--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BISAL FILES | {{file_name}}</title>
+    <title>Pikashow Movies| {{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
@@ -21,15 +21,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- this code is written by @spshah878 tg:https://t.me/Rx_Bots  -->
 <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/bisal_files">
+            <a href="https://telegram.me/Rx_Bots">
                 <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h3 id="heading" style="z-index: 100;" class="magnet title">BISAL FILES</h3>
+                <h3 id="heading" style="z-index: 100;" class="magnet title">Pikashow Movies</h3>
             </a>
         </div>
         <div class="nryt">
@@ -99,33 +99,19 @@
                         <div class="abt-sec" id="sec2">
                             <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/bisal_files"><button>BISAL FILES -
+                                <a class="magnet" href="https://telegram.me/Rx_Bots"><button>Pikashow Movies-
                                         MAIN</button></a>
-                                <a class="magnet" href="https://t.me/movies_request_group_Fhd"><button>BISAL FILES
+                                <a class="magnet" href="https://telegram.me/+nTab5AScr45iOTll"><button>Pikashow Movies
                                         REQUEST GROUP</button></a>
-                                <a class="magnet" href="https://t.me/+lNMBlcpzuyg0NjI1"><button>TERABOX
-                                        LINKS</button></a>
-                                <a class="magnet" href="https://t.me/bisal_movie_request_group"><button>FILES REQ
-                                        BACKUP</button></a>
-                                <a class="magnet" href="https://t.me/+gHtA-IkBdgQ1MzA9"><button>BISAL FILES
-                                        DIRECT</button></a>
+                                
                             </div>
                         </div>
                         <div class="abt-sec" id="sec3">
                             <h1>OUR ALL <span>BOTS</span> LIST</h1>
                             <div class="links bot-link">
-                                <a class="magnet" href="https://t.me/Pm_link_yojana_bot"><button>PM LINK
-                                        YOJANA</button></a>
-                                <a class="magnet" href="https://t.me/Ai_Auto_Filter_Bot"><button>AI FILTER
-                                        BOT</button></a>
-                                <a class="magnet" href="https://t.me/Bisal_File2Link_Bot"><button>FILE STREAM
-                                        BOT</button></a>
-                                <a class="magnet" href="https://t.me/File_RenamerV4_Bot"><button>FILE RENAMER
-                                        BOT</button></a>
-                                <a class="magnet" href="https://t.me/Wanda_Ki_Shakti_Bot"><button>WANDA KI SHAKTI
-                                        BOT</button></a>
-                                <a class="magnet" href="https://t.me/wanda_ki_shakti_2_bot"><button>WANDA KI SHAKTI 2.0
-                                        BOT</button></a>
+                                <a class="magnet" href="https://telegram.me/Shaho_Movies5_Bot"><button>Pikashow 
+                                        Movies Bot</button></a>
+                                
                             </div>
                         </div>
                         <div class="abt-sec" id="sec4">
@@ -135,7 +121,7 @@
                             <p style="text-align: center;">we can tal'k for your support and you can report through
                                 telegram</p>
                             <div class="links contact">
-                                <a href="https://t.me/biisal_bot"><button>CONTACT</button></a>
+                                <a href="https://telegram.me/shaho007"><button>CONTACT</button></a>
                             </div>
                         </div>
                     </div>
@@ -162,7 +148,7 @@
             <center>
 
                 <div class="movie-cont">
-                    <a href="https://t.me/+PA8OPL2Zglk3MDM1">
+                    <a href="https://t.me/+nTab5AScr45iOTll">
                         <div class="movieSug">
                             <div class="movieDets">
 
@@ -189,17 +175,16 @@
 
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2023 <a href="https://t.me/bisal_files"><span
-                                style="font-weight: 700;">BISAL FILES</span></a>. All
+                    <h5 class="text-center">Copyright © 2023 <a href="http://telegram.me/Rx_Bots/"><span
+                                style="font-weight: 700;">Pikashow Movies</span></a>. All
                         Rights Reserved.</h5>
                     <div class="icons">
-                        <a href="https://github.com/biisal"><i class="fa-brands fa-github fa-lg"></i></a>
-                        <a href="https://t.me/bisal_Files"><i class="fa-brands fa-telegram fa-lg"></i></a>
-                        <a href="https://www.instagram.com/avisekeditx"><i
-                                class="fa-brands fa-square-instagram fa-lg"></i></a>
+                        <a href="https://github.com/sandippshah"><i class="fa-brands fa-github fa-lg"></i></a>
+                        <a href="http://telegram.me/Rx_Bots/"><i class="fa-brands fa-telegram fa-lg"></i></a>
+                        
                     </div>
                     <h4 style="font-weight: 700;">This Page Is Made By <a
-                            href="https://t.me/bisal_files"><span>Bisal</span></a></h4>
+                            href="https://t.me/bisal_files"><span>Shaho</span></a></h4>
                 </div>
             </center>
         </footer>
