--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -184,7 +184,7 @@
                         
                     </div>
                     <h4 style="font-weight: 700;">This Page Is Made By <a
-                            href="https://t.me/bisal_files"><span>Shaho</span></a></h4>
+                            href="https://t.me/rx_bots"><span>Shaho</span></a></h4>
                 </div>
             </center>
         </footer>
