--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -8,7 +8,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pikashow Movies| {{file_name}}</title>
+   <!--  <title>Pikashow Movies| {{file_name}}</title>   -->
+      <title>Pikashow Movies</title> 
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
