--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -209,7 +209,7 @@
     new WOW().init();
 </script>
 <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
-<script src="https://biisal.github.io/Resources/StreamJs.js"></script>
+<script src="https://github.com/sandippshah/biisal-file-stream-pro/blob/main/StreamJs.js"></script>
 <script src="script.js"></script>
 
 </html>
