--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pikashow Movies| {{file_name}}</title>  
+    <title>Pikashow Movies| {{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
@@ -19,6 +19,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <!-- this code is written by @spshah878 tg:https://t.me/Rx_Bots  -->
 <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
@@ -28,7 +29,7 @@
         <div class="nleft">
             <a href="https://telegram.me/Rx_Bots">
                 <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h3 id="heading" style="z-index: 100;" class="title">Pikashow Movies</h3>
+                <h3 id="heading" style="z-index: 100;" class="magnet title">Pikashow Movies</h3>
             </a>
         </div>
         <div class="nryt">
