--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -210,7 +210,7 @@
     new WOW().init();
 </script>
 <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
-<script src="https://github.com/sandippshah/Js_files/blob/main/StreamJs.js"></script>
+<script src="https://sandippshah.github.io/StreamJs.js"></script>
 <script src="script.js"></script>
 
 </html>
