--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -154,7 +154,7 @@
 
                             </div>
                             <div class="movieimg">
-                                <img src="">
+                                <img src="" alt="Movie Poster">
                             </div>
                         </div>
                     </a>
