--- a/biisal/template/req.html
+++ b/biisal/template/req.html
@@ -1,3 +1,7 @@
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.  -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -48,16 +52,6 @@
     <div class="outer">
         <div class="inner">
             <div class="main" id="main">
-                <!-- IMDb Information Section -->
-                <div id="imdb-info" class="imdb-info">
-                    <img id="movie-poster" src="" alt="Movie Poster">
-                    <div id="movie-details">
-                        <h4 id="movie-title"></h4>
-                        <p id="movie-plot"></p>
-                        <p id="movie-genres"></p>
-                        <p id="movie-rating"></p>
-                    </div>
-                </div>
                 <video id="player" class="player" src="{{file_url}}" type="video/mp4" playsinline controls
                     width="100%"></video>
                 <div class="player"></div>
@@ -160,7 +154,7 @@
 
                             </div>
                             <div class="movieimg">
-                                <img src="" alt="Movie Poster">
+                                <img src="">
                             </div>
                         </div>
                     </a>
@@ -220,3 +214,6 @@
 <script src="script.js"></script>
 
 </html>
+
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
